# django-htmx-components

./: .env.example  .gitignore  CNAME  LICENSE  LICENSE.txt  Makefile  README.md  app.js  django_components-0.34.1-py3-none-any.whl  index.html  init.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  worker.js
deployment/: add_cron_job.sh  add_ssh_key.sh  config.sh  copy_to_server.sh  deploy.sh  gunicorn_start  gunicorn_supervisor.conf  init.sh  nginx.conf  nginx_ssl.conf
src/: manage.py
src/app/: apps.py  models.py  sitemap.py  urls.py  utils.py  views.py
src/app/migrations/: 0001_initial.py  0002_init_contacts.py  0003_sitemap.py  (+1 more)
src/components/: click_to_edit.py  delete_row.py  urls.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/staticfiles/: _base.3fc9eeb066f3.html  bulk_update.09b471a09100.html  bulk_update.3010cd02c183.html  cascading_selects.6609b643d2c7.html  click_to_edit.8084c1fdc479.html  click_to_edit.e860a5aa4d24.py  click_to_edit.fe10aa1aa56f.py  click_to_edit.py  click_to_load.10c9b98d47d9.html  delete_row.08dbca324200.py  edit_row.f0b2badf8c40.html  flowbite.min.7c2b54dea4b1.js  index.330ffa9733ef.html  infinite_scroll.2911a76df6e3.html  infinite_scroll.557f08f53b4d.html  prism.js  progress_bar.c363aeb6fcab.html  staticfiles.json  style.8907c8ae0e4d.css  style.b924d806fdc9.css  urls.ed747cf49aae.py
src/templates/: _base.html  active_search.html  bulk_update.html  cascading_selects.html  click_to_edit.html  click_to_load.html  delete_row.html  edit_row.html  index.html  inline_validation.html  progress_bar.html
(+81 files in other folders)
