[tool.poetry]
name = "django_htmx_components"
version = "0.1.0"
description = ""
authors = ["Dylan Castillo <dylan@iwanalabs.com>"]
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
django-htmx = "^1.17.2"
WebTest = "^3.0.0"
django-components = "0.34.1"
django-environ = "^0.11.2"
whitenoise = "^6.6.0"
redis = "^5.0.1"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
ruff = "^0.0.282"
notebook = "^7.0.2"
types-requests = "^2.31.0.3"
djlint = "^1.34.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
